[gd_scene load_steps=7 format=3 uid="uid://08qo8iiaa474"]

[ext_resource type="Script" uid="uid://b73y8w2dda2h" path="res://TitleScreen.gd" id="1_5sxkl"]
[ext_resource type="Theme" uid="uid://be8grmawpb7cm" path="res://theme/default_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://bw4vb0h6wby81" path="res://bg_fg.png" id="3_1xr1c"]
[ext_resource type="Texture2D" uid="uid://clywbt1cla3bm" path="res://bg_foreground.png" id="4_tu0on"]
[ext_resource type="Texture2D" uid="uid://dqq8cmyccxr7e" path="res://logo.png" id="5_2k3je"]
[ext_resource type="Texture2D" uid="uid://bg6srd50pvv48" path="res://bg_foreground_gray.png" id="5_skwql"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_5sxkl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.917088, 0.924742, 0.951498, 1)

[node name="BgFg" type="Sprite2D" parent="."]
visible = false
position = Vector2(474, 821)
texture = ExtResource("3_1xr1c")

[node name="BgForeground" type="Sprite2D" parent="."]
visible = false
position = Vector2(408, 787)
texture = ExtResource("4_tu0on")

[node name="BgForegroundGray" type="Sprite2D" parent="."]
position = Vector2(369, 732)
texture = ExtResource("5_skwql")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(342, 266)
texture = ExtResource("5_2k3je")

[node name="TitleContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleShadow" type="Label" parent="TitleContainer"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.167
anchor_right = 0.9
anchor_bottom = 0.267
offset_left = 4.0
offset_top = 4.0
offset_right = 3.99994
offset_bottom = 56.48
theme_override_colors/font_color = Color(0, 0.353, 0.205, 0.8)
theme_override_font_sizes/font_size = 56
text = "LINKAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainTitle" type="Label" parent="TitleContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.167
anchor_right = 0.9
anchor_bottom = 0.267
offset_left = 0.199997
offset_top = -0.384003
offset_right = -0.200012
offset_bottom = 19.416
theme = ExtResource("2_theme")
theme_override_colors/font_color = Color(0, 1, 0.443, 1)
theme_override_colors/font_shadow_color = Color(0, 0.388235, 0.278431, 1)
theme_override_font_sizes/font_size = 120
text = "LINKAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.8
anchor_bottom = 0.52
theme_override_font_sizes/font_size = 36
text = "START"

[node name="TilesetButton" type="Button" parent="ButtonContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.58
anchor_right = 0.8
anchor_bottom = 0.7
theme_override_font_sizes/font_size = 36
text = "STORE"

[node name="AboutButton" type="Button" parent="ButtonContainer"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.76
anchor_right = 0.8
anchor_bottom = 0.88
theme_override_font_sizes/font_size = 36
text = "ABOUT"

[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonContainer/TilesetButton" to="." method="_on_tileset_button_pressed"]
[connection signal="pressed" from="ButtonContainer/AboutButton" to="." method="_on_about_button_pressed"]
